# gwcelery

./: .bash_profile  .bashrc  .gitattributes  .gitignore  .gitlab-ci.yml  .k5login  .readthedocs-requirements.txt  .readthedocs.yml  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  INSTALL.md  INSTALL.rst  LICENSE.md  LICENSE.rst  MANIFEST.in  Pipfile  README.md  README.rst  docs-requirements.txt  pyproject.toml  renew-cert.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.gitlab/issue_templates/: Create a Release.md
condor/: gwcelery-celery-worker.sub  gwcelery-lvalert-listen.sub  gwcelery-openmp-worker.sub
doc/: conf.py  configuration.rst  contributing.md  contributing.rst  deployment.rst  design.rst  gwcelery.celery.rst  gwcelery.conf.rst  gwcelery.config.rst  gwcelery.email.rst  gwcelery.igwn_alert.rst  gwcelery.lvalert.rst  gwcelery.rst  gwcelery.sentry.rst  gwcelery.tasks.alerts.rst  gwcelery.tasks.bayestar.rst  gwcelery.tasks.circulars.rst  gwcelery.tasks.condor.rst  gwcelery.tasks.detchar.rst  gwcelery.tasks.em_bright.rst  gwcelery.tasks.external_skymaps.rst  gwcelery.tasks.external_triggers.rst  gwcelery.tasks.first2years.rst  gwcelery.tasks.gcn.external_triggers.rst  gwcelery.tasks.gcn.rst  gwcelery.tasks.gcn.validate.rst  gwcelery.tasks.gracedb.rst  gwcelery.tasks.igwn_alert.rst  gwcelery.tasks.inference.rst  gwcelery.tasks.lalinference.rst  gwcelery.tasks.ligo_fermi_skymaps.rst  gwcelery.tasks.lvalert.rst  gwcelery.tasks.orchestrator.rst  gwcelery.tasks.p_astro.rst  gwcelery.tasks.p_astro_gstlal.rst  gwcelery.tasks.p_astro_other.rst  gwcelery.tasks.raven.rst  gwcelery.tasks.rst  gwcelery.tasks.skymaps.rst  gwcelery.tasks.superevents.rst  (+13 more)
doc/_static/: gwcelery.sub
etc/: gwcelery.sub
gwcelery/: __init__.py  _version.py  celery.py  commands.py  condor.py  flask.py  jinja.py  lvalert.ini  nagios.py  sentry.py  tasks.py  util.py  views.py
gwcelery/conf/: __init__.py  development.py  playground.py  production.py  test.py
gwcelery/config/: __init__.py  development.py  production.py  test.py
gwcelery/data/: gwcelery.sub
gwcelery/data/p_astro_gstlal/: bbh_wellfound_hits.txt  bns_wellfound_hits.txt  mg_wellfound_hits.txt  nsbh_wellfound_hits.txt
gwcelery/email/: __init__.py  bootsteps.py  signals.py
gwcelery/igwn_alert/: __init__.py  bootsteps.py  signals.py
gwcelery/kafka/: __init__.py  bootsteps.py
gwcelery/lvalert/: __init__.py  bootsteps.py  client.py  signals.py
gwcelery/sentry/: __init__.py
gwcelery/sentry/integrations/: __init__.py  condor.py  requests.py  subprocess.py
gwcelery/static/: typeahead.css
gwcelery/static/vega/: index.html
gwcelery/tasks/: __init__.py  alerts.py  bayestar.py  circulars.py  condor.py  core.py  detchar.py  dispatch.py  em_bright.py  external_skymaps.py  external_triggers.py  first2years.py  first2years_external.py  gcn.py  gracedb.py  igwn_alert.py  inference.py  lalinference.py  legacy_gracedb.py  ligo_fermi_skymaps.py  lvalert.py  notice_text.py  orchestrator.py  p_astro.py  p_astro_gstlal.py  p_astro_other.py  raven.py  skymaps.py  superevent_manager.py  superevents.py  userguide.py  vectorPass.py  voevent.py
gwcelery/tasks/gcn/: __init__.py  external_triggers.py  validate.py
gwcelery/templates/: fits_header.html  index.html  index.jinja2  online_pe.ini  online_pe.jinja2  vector_table.jinja2
gwcelery/tests/: __init__.py  conftest.py  process.py  test_bayestar.py  test_condor.py  test_dispatch.py  test_eternal.py  test_flask.py  test_nagios.py  test_sentry.py  test_tasks_alerts_validate.py  test_tasks_bayestar.py  test_tasks_circulars.py  test_tasks_condor.py  test_tasks_detchar.py  test_tasks_dispatch.py  test_tasks_em_bright.py  test_tasks_external_skymaps.py  test_tasks_external_triggers.py  test_tasks_first2years.py  test_tasks_first2years_external.py  test_tasks_gcn.py  test_tasks_gcn_validate.py  test_tasks_gracedb.py  test_tasks_igwn_alert.py  test_tasks_inference.py  test_tasks_ligo_fermi_skymaps.py  test_tasks_lvalert.py  test_tasks_orchestrator.py  test_tasks_p_astro.py  test_tasks_p_astro_gstlal.py  test_tasks_p_astro_other.py  test_tasks_raven.py  test_tasks_skymaps.py  test_tasks_superevents.py  test_tasks_voevent.py  test_tempfile.py  test_tools_condor.py  test_tools_condor_submit_helper.py  test_tools_flask.py  (+4 more)
gwcelery/tests/data/: G000012_S0040_preferred.json  G298048-1-Initial.gcn.xml  G298048-1-Initial.xml  G298048_log.json  H1L1V1-mean_counts-1126051217-61603201.json  H1L1V1-pipeline-far_snr-thresholds.json  H1L1V1-weights-1126051217-61603201.json  H1L1V1-weights-bins_686-1126051217-61603201.h5  H1L1V1-weights-bins_686-1126051217-61603201.json  MS220722v.xml  MS220722v_bayestar.multiorder.fits  T0212_S0039_preferred.json  T0212_S0039_preferred_single_ifo.json  T0219_S0041_nopreferred.json  agile_grb_gcn.xml  coinc.xml  coinc_G322589.xml  coinc_G5351.xml  externaltrigger_original_data.xml  fermi_grb_gcn.xml  fermi_initial_grb_gcn.xml  fermi_noise_gcn.xml  fermi_noise_gcn_2.xml  fermi_subthresh_grb_gcn.xml  fermi_subthresh_grb_lowconfidence.xml  fits_header_result.html  gracedb_externaltrigger_log.json  gracedb_setrigger_log.json  igwn_alert_detchar.json  igwn_alert_exttrig_creation.json  igwn_alert_fits.json  igwn_alert_snews_test_creation.json  igwn_alert_subgrb_creation.json  igwn_alert_superevent_creation.json  igwn_alert_voevent.json  integral_grb_gcn.xml  lvalert_burst_superevent_creation.json  lvalert_cbc_superevent_creation.json  lvalert_detchar.json  lvalert_event_creation.json  (+35 more)
gwcelery/tests/data/llhoft/fail/L1/: L-L1_O2_llhoft-1216577976-4.gwf  L-L1_llhoft-0-16.gwf
gwcelery/tests/data/llhoft/omegascan/: scanme.gwf
gwcelery/tests/data/llhoft/pass/H1/: H-H1_O2_llhoft-1216577976-4.gwf  (+1 more)
gwcelery/tools/: __init__.py  condor.py  condor_submit_helper.py  flask.py  nagios.py
gwcelery/util/: __init__.py  cmdline.py  eternal.py  matplotlib.py  proxy.py  resources.py  sphinx.py  tempfile.py
gwcelery/voevent/: __init__.py  bootsteps.py  logging.py  signals.py  subscriber.py  util.py
public_html/: .htaccess  flower-ports.txt  gwcelery-ports.txt
