[aliases]
test=pytest

[coverage:run]
source = gwcelery
omit =
    gwcelery/tests/*
    gwcelery/config/development.py
    gwcelery/config/playground.py
    gwcelery/config/production.py
    gwcelery/config/test.py
parallel = True
concurrency =
    thread
    multiprocessing

[metadata]
name = gwcelery
version = 0.0.31.dev0
license = GPL-2+
author = Leo Singer
author_email = leo.singer@ligo.org
description = Hipster pipeline for annotating LIGO events
long_description = GWCelery is a simple and reliable package for annotating and orchestrating LIGO/Virgo alerts, built from widely used open source components.
url = https://git.ligo.org/emfollow/gwcelery
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >= 3.5

[options.entry_points]
celery.commands =
    condor = gwcelery.condor:CondorCommand
    nagios = gwcelery.nagios:NagiosCommand
console_scripts =
    gwcelery = gwcelery:app.start

[options.package_data]
gwcelery = templates/*.html, data/*.sub, data/first2years/2016/*.xml.gz, data/p_astro_gstlal/*.txt
gwcelery.tests = data/*.html, data/*.json, data/*.xml, data/*.xml.gz, data/llhoft/*/*/*.gwf, data/*.sqlite
