[aliases]
test=pytest

[coverage:run]
source = gwcelery
omit =
    gwcelery/tests/*
    gwcelery/conf/development.py
    gwcelery/conf/playground.py
    gwcelery/conf/production.py
    gwcelery/conf/test.py
parallel = True
concurrency =
    thread
    multiprocessing

[flake8]
exclude =
    gwcelery/_version.py
    versioneer.py

[metadata]
name = gwcelery
license = GPL-2+
author = Leo Singer
author_email = leo.singer@ligo.org
description = Hipster pipeline for annotating LIGO events
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://git.ligo.org/emfollow/gwcelery
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
celery.commands =
    condor = gwcelery.tools.condor:CondorCommand
    flask = gwcelery.tools.flask:FlaskCommand
    nagios = gwcelery.tools.nagios:NagiosCommand
console_scripts =
    gwcelery = gwcelery:app.start

[options.package_data]
gwcelery = static/*.css, templates/*.jinja2, data/*.sub, data/first2years/2016/*.xml.gz
gwcelery.tests = data/*.html, data/*.json, data/*.xml, data/*.xml.gz, data/llhoft/*/*/*.gwf, data/*.sqlite, data/*.pickle, data/*.h5, data/*.hdf5

[versioneer]
VCS = git
versionfile_build = gwcelery/_version.py
versionfile_source = gwcelery/_version.py
tag_prefix = v
parentdir_prefix = gwcelery-
