[aliases]
test=pytest

[coverage:run]
source = gwcelery
omit =
    gwcelery/tests/*
    gwcelery/conf/development.py
    gwcelery/conf/playground.py
    gwcelery/conf/production.py
    gwcelery/conf/test.py
parallel = True
concurrency =
    thread
    multiprocessing

[flake8]
exclude =
    gwcelery/_version.py
    versioneer.py
ignore = W503,W504,D100,D101,D102,D103,D104,D107,D205,D400,D401,D403,E126

[metadata]
name = gwcelery
license = GPL-2+
license_file = LICENSE.rst
author = Leo Singer
author_email = leo.singer@ligo.org
description = Hipster pipeline for annotating LIGO events
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://git.ligo.org/emfollow/gwcelery
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Bug Tracker = https://git.ligo.org/emfollow/gwcelery/issues
    Documentation = https://gwcelery.readthedocs.io/
    Source Code = https://git.ligo.org/emfollow/gwcelery

[options]
packages = find:
python_requires = >=3.7
tests_require =
    pytest-flask
    pytest-socket

[options.entry_points]
celery.commands =
    condor = gwcelery.tools.condor:CondorCommand
    flask = gwcelery.tools.flask:FlaskCommand
    nagios = gwcelery.tools.nagios:NagiosCommand
console_scripts =
    gwcelery = gwcelery:app.start
    gwcelery-condor-submit-helper = gwcelery.tools.condor_submit_helper:main

[options.package_data]
gwcelery = static/*.css, static/vega/*.html, templates/*.jinja2, data/*.sub, data/first2years/2016/*.xml.gz
gwcelery.tests = data/*.html, data/*.json, data/*.xml, data/*.xml.gz, data/llhoft/*/*.gwf, data/llhoft/*/*/*.gwf, data/*.pickle, data/*.hdf5

[versioneer]
VCS = git
versionfile_build = gwcelery/_version.py
versionfile_source = gwcelery/_version.py
tag_prefix = v
parentdir_prefix = gwcelery-
